--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,12 @@ repos:
     rev: 24.3.0
     hooks:
       - id: pyink  # Ensures proper code formatting
+
+  - repo: local
+    hooks:
+      - id: run-pytest
+        name: Run Unit Tests with Coverage
+        entry: poetry run pytest --cov=source --cov-fail-under=80
+        language: system
+        pass_filenames: false
+        args: ["tests"]
