--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+testpaths = tests
+pythonpath = .
 log_cli=true
 log_level=INFO
 log_format = %(asctime)s,%(msecs)03d %(levelname)s PYTEST %(message)s [%(pathname)s:%(lineno)d]
