--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,18 +9,13 @@ repos:
     rev: 24.8.0
     hooks:
       - id: black
-        args: [--line-length=88]  # Formats Python code to be consistent
-
-  - repo: https://github.com/google/pyink
-    rev: 24.3.0
+        args:
+        - --line-length=150
+        - --target-version=py313
+        - --skip-string-normalization
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.0.0
     hooks:
-      - id: pyink  # Ensures proper code formatting
-
-  - repo: local
-    hooks:
-      - id: run-pytest
-        name: Run Unit Tests with Coverage
-        entry: poetry run pytest --cov=source --cov-fail-under=80
-        language: system
-        pass_filenames: false
-        args: ["tests"]
+      - id: flake8
+        args:
+          - --ignore=E203,E501,E266,F541,W503
