--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,12 @@ repos:
       - id: flake8
         args:
           - --ignore=E203,E501,E266,F541,W503
+
+  - repo: local
+    hooks:
+      - id: run-pytest
+        name: Run Unit Tests with Coverage
+        entry: poetry run pytest --cov=source --cov-fail-under=80
+        language: system
+        pass_filenames: false
+        args: ["tests"]
