--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
     hooks:
       - id: run-pytest
         name: Run Unit Tests with Coverage
-        entry: poetry run pytest --cov=source --cov-fail-under=80
+        entry: pytest --cov=source --cov-fail-under=80
         language: system
         pass_filenames: false
         args: ["tests"]
