--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 flask~=3.1.0
 sqlalchemy~=2.0.38
+waitress
 
 # dev dependencies
 pytest>=7.0
@@ -9,7 +10,6 @@ ptpython
 pre-commit
 Werkzeug>=2.0.0
 pip~=21.3.1
-Pillow~=9.4.0
 jedi~=0.19.2
 distlib~=0.3.9
 virtualenv~=20.29.1
@@ -17,4 +17,3 @@ requests~=2.32.3
 filelock~=3.17.0
 requests
 freezegun
-
